# simple-game-engine

./: CMakeLists.txt  README.md  breakout.kdev4
.kdev4/: breakout.kdev4
cmake/: FindSDL2_ttf.cmake  copyright.txt
include/: game.h  game_constants.h
include/breakout/: ball.h  game_object_factory.h
include/engine/: collisions.h  game.h  game_engine_constants.h  game_loop.h  scene.h
include/game_object/: ball.h  game_object.h  game_object_factory.h  graphics_component.h  observer.h  physics_component.h  subject.h
include/input/: input.h  input_poller.h
include/jump_game/: collisions.h  game_object_factory.h  game_object_types.h  jump_camera.h  physics.h
include/math/: geometry.h  util.h
include/resources/: resources.h
include/sdl/: asset_loader.h  sdl_system.h
include/video/: camera.h  canvas.h
jump_game/: game.cpp  game.h  main.cpp
jump_game/include/: game_constants.h  game_object_factory.h  game_object_types.h  jump_game.h  jump_game_scene.h  physics.h
jump_game/src/: game_object_factory.cpp  jump_game_scene.cpp  jump_scene.cpp  physics.cpp
src/: game.cpp
src/breakout/: ball.cpp  breakout_scene.cpp  game_object_factory.cpp
src/engine/: collisions.cpp  game.cpp  game_loop.cpp  scene.cpp
src/game_object/: ball.cpp  game_object_factory.cpp  graphics_component.cpp  physics_component.cpp  subject.cpp
src/input/: input_poller.cpp
src/jump_game/: game_object_factory.cpp  jump_camera.cpp  jump_scene.cpp  physics.cpp
src/math/: geometry.cpp
src/resources/: resources.cpp
src/scenes/: breakout_scene.cpp  dummy_scene.cpp
src/sdl/: asset_loader.cpp  sdl_system.cpp
src/video/: camera.cpp  canvas.cpp
